--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
             <div class="highlight-box">
                 <p><strong>Q: 間違って送信してしまった場合はどうすればいいですか？</strong></p>
-                <p><strong>A: 再度正しい内容でフォームを送信してください。</strong>最新の回答が優先されます。</p>
+                <p><strong>A:</strong> 再度正しい内容でフォームを送信してください。ただし、<strong>間違って送信してしまった休み希望に加えて、新しい休み希望も追加で更新されます。</strong>間違って送信してしまった休み希望で、本当は出勤したいという場合には、店長に個別連絡をしてください。</p>
             </div>
 
             <div class="highlight-box">
